--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,15 @@
     </header>
     <main class="main">
         <div class="container">
-            main
+            <div class="row row_reverse row_center">
+
+                <div class="info">
+                    info
+                </div>
+                <div class="animated">
+                    animated
+                </div>
+            </div>
         </div>
     </main>
     <footer class="footer">
