add styles for trminal and start script

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,29 @@
                     info
                 </div>
                 <div class="animated">
-                    animated
+                    <div class="Terminal">
+                        <div class="Terminal__Toolbar">
+                          <div class="Toolbar__buttons">
+                            <button class="Toolbar__button Toolbar__button--exit">&#10005;</button>
+                            <button class="Toolbar__button">&#9472;</button>
+                            <button class="Toolbar__button">&#9723;</button>
+                          </div>
+                          <p class="Toolbar__user">xDarKFeniXx@notebook:~</p>
+                        </div>
+                        <div class="Terminal__body">
+                          <div class="Terminal__text">Just start!</div>
+                          <div class="Terminal__text">Just start!</div>
+                          <div class="Terminal__text">Just start!</div>
+                          <div class="Terminal__text">Just start!</div>
+                          <div class="Terminal__Prompt">
+                            <span class="Prompt__user">xDarKFeniXx@notebook:</span>
+                            <span class="Prompt__location">~</span>
+                            <span class="Prompt__dollar">$&nbsp;</span>
+                            <span class="Prompt__text"></span>
+                            <span class="Prompt__cursor"></span>
+                          </div>
+                        </div>
+                      </div>
                 </div>
             </div>
         </div>
