add npm, styles and script

--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,31 @@
 
 <body>
     <header class="header">
-        <div class="container">
-            header
-        </div>
+        
+            <div class="header__left">
+                Projects
+            </div>
+            <div class="header__date">
+                date
+            </div>
+            <div class="header__right">
+                <a href="#">github</a>
+                <a href="#">facebook</a>
+                <a href="#">tweeter</a>
+            </div>
+     
     </header>
     <main class="main">
         <div class="container">
             <div class="row row_reverse row_center">
 
                 <div class="info">
-                    info
+                   <p>Markov Nikita</p>
+                   <p>Frontend JavaScript developer</p>
+                   <p>html, css, JavaScript</p>
+                   <p>Ract (with hooks), Redux, Redux-Thunk, Redux-Saga</p>
+                   <p>React-Native</p>
+                   <p>Vue</p>
                 </div>
                 <div class="animated">
                     <div class="Terminal">
@@ -32,10 +47,8 @@
                           <p class="Toolbar__user">xDarKFeniXx@notebook:~</p>
                         </div>
                         <div class="Terminal__body">
-                          <div class="Terminal__text">Just start!</div>
-                          <div class="Terminal__text">Just start!</div>
-                          <div class="Terminal__text">Just start!</div>
-                          <div class="Terminal__text">Just start!</div>
+                          <div class="Terminal__text"></div>
+
                           <div class="Terminal__Prompt">
                             <span class="Prompt__user">xDarKFeniXx@notebook:</span>
                             <span class="Prompt__location">~</span>
@@ -49,11 +62,16 @@
             </div>
         </div>
     </main>
-    <footer class="footer">
-        <div class="container">
-            footer
+    <aside class="side-bar">
+        <div class="side-bar__list">
+            <div class="side-bar__item">
+                item
+            </div>
+            <div class="side-bar__item">
+                item
+            </div>
         </div>
-    </footer>
+    </aside>
     <script src="js/index.js"></script>
 </body>
 
