add new text and refactor Terminal size

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,10 @@
                 date
             </div>
             <div class="header__right">
-                <a href="https://github.com/xDarKFeniXx" target="_blank"><i class="fab fa-github"></i> github</a>
-                <a href="https://www.facebook.com/xDarKFeniXx/"  target="_blank"><i class="fab fa-facebook"></i> facebook</a>
-                <a href="https://twitter.com/xDarK_FeniXx" target="_blank"><i class="fab fa-twitter"></i> tweeter</a>
+                <a href="https://github.com/xDarKFeniXx" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.facebook.com/xDarKFeniXx/"  target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://twitter.com/xDarK_FeniXx" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://t.me/xDarKFeniXx" target="_blank"><i class="fab fa-telegram"></i></i></a>
             </div>
      
     </header>
@@ -93,6 +94,7 @@
                        </div>
                     </div>
                 </div>
+                
                 </div>
                 <div class="animated">
                     <div class="Terminal">
